# reqman

./: .gitignore  404.html  AEFF_dual_default-vs-yolo.html  AEFF_dual_rmr-vs-yolo.html  AEFF_dual_solo-vs-fresh.html  AEFF_solo_default.html  AEFF_solo_rmr.html  AEFF_solo_yolo.html  CONTRIBUTING.md  README.md  TEST.yml  buildWinExe.py  changelog  fakereqman.py  index.html  mkdocs.yml  pyproject.toml  reqman.py  requirements.txt  setup.py  sitemap.xml  tests.py
BuildWinExe/: build.bat
FUTURTESTS/: README.txt  auto_self_conf.yml  test_autos.py
REALTESTS/: README.txt  TEST_html_repr.yml  TEST_html_repr_cp1252.yml  TEST_limit_output_size.yml  auto_970_pyerror.yml  auto_980_xml.yml  auto_ERROR_bad_file.yml  auto_ERROR_bad_file_statement.yml  auto_ERROR_bad_file_statement2.yml  auto_ERROR_bad_file_statement3.yml  auto_ERROR_bad_path.yml  auto_ERROR_call_unknown_proc.yml  auto_ERROR_call_with_unknown.yml  auto_ERROR_cmd_bad_call.yml  auto_ERROR_cmd_bad_option.yml  auto_ERROR_cmd_bad_switch.yml  auto_ERROR_if_solo.yml  auto_ERROR_in_foreach copy.yml  auto_ERROR_in_foreach.yml  auto_ERROR_multiple_request.yml  auto_ERROR_same_procs.yml  auto_ERROR_selfconf.yml  auto_ERROR_selfconf2.yml  auto_ERROR_selfconf3.yml  auto_ERROR_selfconf4.yml  auto_ERROR_selfconf5.yml  auto_ERROR_unknown_action.yml  auto_ERROR_unknown_statement.yml  auto_FUTUR_cant_rmr_on_dual.yml  auto_FUTUR_cookie.yml  auto_FUTUR_self_conf.yml  auto_NEW_SCENAR.yml  auto_TODO.yml  auto_TODO2.yml  auto_bad_timeout.yml  auto_break.yml  auto_call_override.yml  auto_check_values.yml  auto_command_wait.yml  auto_cookies.yml  (+45 more)
REALTESTS_in_progress/: new_python_decl.yml
command/: index.html
conf/: index.html
demo/: index.html
docs/: README.md  command.md  conf.md  demo.md  example.md  from_postman.md  index.md  install.md  python.md  simple_use.md  yml_syntax.md
example/: computebody.yml  index.html  macros.yml  params.yml  reqman.conf  save_var.yml  tests.yml
examples/: README.md  computebody.yml  jsonstore.yml  macros.yml  new.yml  params.yml  procedures.yml  reqman.conf  save_var.yml  server_down.yml  server_timeout.yml  test_upload.yml  tests.yml  tuto.yml
from_postman/: index.html
install/: index.html
newcore/: __init__.py  com.py  common.py  env.py  testing.py  utils.py  xlib.py
python/: index.html
reqman/: __init__.py  com.py  com_httpx.py  common.py  dsl.py  env.py  testing.py  xlib.py
search/: search_index.json
simple_use/: index.html
tests/: README.txt  conftest.py  context.py  test_000_env.py  test_001_env_dyn.py  test_002_prettify.py  test_003_encoding_jules.py  test_003_izip.py  test_004_updateUrlQuery.py  test_005_reqs_string.py  test_006_dict_merge.py  test_007_create.py  test_008_env_xpath.py  test_009_gen.py  test_010_reqs_call.py  test_015_reqs_break.py  test_017_reqs_wait.py  test_018_reqs_if.py  test_020_reqs_actionext.py  test_030_reqs_foreach.py  test_035_reqs_param.py  test_040_reqs_headers.py  test_044_reqs_transform_basic.py  test_300_new.py  (+91 more)
(+50 files in other folders)
