[project]
name = "reqman"
version = "0.0.0"
description = "Create your http(s)-tests in simple yaml files, and run them with command line, against various environments"
authors = [
    {name = "manatlan", email = "manatlan@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "aiohttp",
    "python-dotenv",
    "py-dom-xpath-six",
    "pyyaml>=4.2b1",
    "stpl>=1.13.2",
    "colorama",
    "pyjwt",
    "junit-xml",
]

[project.urls]
Repository = "https://github.com/manatlan/reqman"

[project.scripts]
reqman = "reqman:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio",
    "py>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"