[project]
name = "reqman"
version = "0.0.0"
requires-python = ">=3.8"
description = "Create your http(s)-tests in simple yaml files, and run them with command line, against various environments"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    {name = "manatlan", email = "manatlan@gmail.com"},
]
dependencies = [
    "httpx",
    "httpx-socks",
    "python-dotenv",
    "py-dom-xpath-six",
    "pyyaml>=4.2b1",
    "stpl>=1.13.2",
    "colorama",
    "pyjwt",
    "junit-xml",
]

[tool.uv]
package = true

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project.scripts]
reqman = "reqman.__main__:main"

[project.urls]
Homepage = "https://github.com/manatlan/reqman"
Repository = "https://github.com/manatlan/reqman"
Issues = "https://github.com/manatlan/reqman/issues"

[tool.pytest.ini_options]
addopts = "--cov=src/reqman --cov-report=html --cov-report=xml --cov-report=term-missing"

[dependency-groups]
dev = [
    "aiohttp",
    "py>=1.11.0",    
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pyinstaller",
]
